--- a/config.conf
+++ b/config.conf
@@ -13,7 +13,7 @@ birthday_my=02-23
 app_id=wxf7cd83c5ef0ec1ca
 app_secret=ff6094606ca574470d133532061f5d2b
 #消息模板ID，在微信测试号中添加模板会自动生成ID
-template_id=dqUdP-7rvHKaZqgT9DkEUJRGEAkxtPI_CKILHU6PGd8
+template_id=
 #接收消息的用户ID，让你的女朋友扫微信测试号的二维码，获取微信用户ID
 user_id=oPYAy6V8WGoaxTdcTTxWnZncWHq0
 #如有多个女朋友或者女朋友有多个微信，请使用以下格式,","隔开
